--- a/client/src/components/routes/styles.scss
+++ b/client/src/components/routes/styles.scss
@@ -5,12 +5,21 @@
   text-decoration: none;
 }
 
-nav {
+.navbar-container {
   width: 100vw;
   height: 10vh;
   display: flex;
   border-bottom: 0.75px solid $gray;
   background-color: $white;
+
+  .brand {
+    img {
+      display: none;
+    }
+    h1 {
+      display: none;
+    }
+  }
 
   a {
     width: 17.5%;
@@ -27,25 +36,12 @@ nav {
     &:first-of-type {
       width: 20%;
       border-right: 0.75px solid $gray;
-
-      @media screen and (width < 700px) {
-        img {
-          transition: 200ms ease;
-          width: 10vw;
-        }
-      }
     }
 
     p {
-      font-size: 1.5vw;
+      font-size: 20px;
       color: $primary;
       position: relative;
-      transition: 200ms ease;
-
-      @media screen and (width < 700px) {
-        transition: 200ms ease;
-        font-size: 3vw;
-      }
 
       &:before {
         content: "";
@@ -83,17 +79,153 @@ nav {
   }
 
   .icon {
-    width: 2vw;
-
-    @media screen and (width < 700px) {
-      transition: 200ms ease;
-      width: 4vw;
-    }
+    width: 30px;
   }
 
   .logo {
     width: 60px;
     height: 60px;
+  }
+
+  button {
+    display: none;
+  }
+
+  .dropdown-menu {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .navbar-container {
+    height: 30vh;
+
+    a {
+      display: none;
+    }
+
+    .brand {
+      margin-left: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        display: block;
+        width: 100px;
+      }
+
+      h1 {
+        flex: 0.5;
+        display: inline;
+        text-transform: uppercase;
+        opacity: 0.6;
+        letter-spacing: 0.1em;
+        font-size: 30px;
+      }
+    }
+
+    .dropdown {
+      position: relative;
+      display: flex;
+      flex: 1;
+      justify-content: flex-end;
+
+      .dropdown-menu {
+        position: absolute;
+        display: block;
+        box-sizing: border-box;
+        padding: 20px;
+        width: 200px;
+        height: 200px;
+        opacity: 0;
+        margin: 30px 70px 0 0px;
+        border-radius: 7px;
+        background-color: rgba($color: $secondary, $alpha: 0.2);
+        transition: all 0.3s ease;
+
+        &.open {
+          opacity: 1;
+        }
+
+        .categories {
+          width: 100%;
+          height: 75%;
+
+          a {
+            width: 50%;
+            height: 50%;
+            border: none;
+            display: inline-block;
+
+            &.active p::before {
+              width: 35%;
+            }
+
+            p {
+              font-size: 15px;
+
+              &::before {
+                border-bottom: 0.5px solid $primary;
+                bottom: -0.5px;
+              }
+            }
+          }
+        }
+
+        .account-i {
+          display: flex;
+          justify-content: space-evenly;
+          width: 100%;
+          height: 25%;
+
+          a {
+            border: none;
+            display: inline-block;
+            height: 100%;
+
+            .icon {
+              margin-left: 5px;
+              width: 20px;
+            }
+          }
+        }
+      }
+
+      .toggle-btn {
+        width: 40px;
+        height: 40px;
+        display: block;
+        margin: 20px 20px 0 0;
+        border: none;
+        background-color: transparent;
+        opacity: 0.6;
+        cursor: pointer;
+        border-radius: 50%;
+
+        &:hover {
+          transition: 200ms ease-in-out;
+          opacity: 1;
+        }
+
+        &:active {
+          transition: 0.2s ease;
+          scale: 0.95;
+        }
+
+        .toggle-btn_i {
+          width: 40px;
+          transition: all 0.2s ease;
+          rotate: 90deg;
+          padding-top: 10px;
+
+          &.open {
+            rotate: 0deg;
+          }
+        }
+      }
+    }
   }
 }
 
