--- a/client/src/components/ui/CardsComponents/card/styles.scss
+++ b/client/src/components/ui/CardsComponents/card/styles.scss
@@ -1,11 +1,12 @@
 @import "../../../../Styles/global-variables";
 
 .card-container {
+  box-sizing: border-box;
   display: inline-block;
-  width: 384px;
+  width: 23vw;
   height: 660px;
   border: 2px solid $primary;
-  margin: 1em;
+  margin: 1vw;
   cursor: pointer;
   box-shadow: $cards_box_shadow;
 
@@ -78,5 +79,13 @@
       opacity: 0.7;
       margin: 0.7rem;
     }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .card-container {
+    margin-left: 6%;
+    width: 40%;
+    height: 750px;
   }
 }
