--- a/client/src/components/ui/Input/styles.css
+++ b/client/src/components/ui/Input/styles.css
@@ -5,8 +5,7 @@
   margin-top: 10px;
   width: 51vh;
 }
-
-.form__field {
+.form__group .form__field {
   width: 100%;
   border: 0;
   border-bottom: 2px solid #8c8c8c;
@@ -19,38 +18,37 @@
   -o-transition: border-color 0.2s;
   transition: border-color 0.2s;
 }
-.form__field::-webkit-input-placeholder {
+.form__group .form__field::-webkit-input-placeholder {
   color: transparent;
 }
-.form__field::-moz-placeholder {
+.form__group .form__field::-moz-placeholder {
   color: transparent;
 }
-.form__field:-ms-input-placeholder {
+.form__group .form__field:-ms-input-placeholder {
   color: transparent;
 }
-.form__field::-ms-input-placeholder {
+.form__group .form__field::-ms-input-placeholder {
   color: transparent;
 }
-.form__field::placeholder {
+.form__group .form__field::placeholder {
   color: transparent;
 }
-.form__field:-moz-placeholder-shown ~ .form__label {
+.form__group .form__field:-moz-placeholder-shown ~ .form__label {
   font-size: 1.3rem;
   cursor: text;
   top: 20px;
 }
-.form__field:-ms-input-placeholder ~ .form__label {
+.form__group .form__field:-ms-input-placeholder ~ .form__label {
   font-size: 1.3rem;
   cursor: text;
   top: 20px;
 }
-.form__field:placeholder-shown ~ .form__label {
+.form__group .form__field:placeholder-shown ~ .form__label {
   font-size: 1.3rem;
   cursor: text;
   top: 20px;
 }
-
-.form__label {
+.form__group .form__label {
   position: absolute;
   top: 0;
   display: block;
@@ -60,8 +58,7 @@
   font-size: 1rem;
   color: #8c8c8c;
 }
-
-.form__field:focus {
+.form__group .form__field:focus {
   font-weight: 700;
   border-width: 3px;
   -o-border-image: -o-linear-gradient(left, #8c8c8c, #d6d6d6);
@@ -69,7 +66,7 @@
      border-image: linear-gradient(to right, #8c8c8c, #d6d6d6);
   border-image-slice: 1;
 }
-.form__field:focus ~ .form__label {
+.form__group .form__field:focus ~ .form__label {
   top: 0;
   display: block;
   -webkit-transition: 0.3s;
@@ -78,4 +75,10 @@
   font-size: 1rem;
   color: #0b0909;
   font-weight: 700;
+}
+
+@media screen and (max-width: 767px) {
+  .form__group {
+    margin-right: 100px;
+  }
 }
